	PR libfortran/59227 	* intrinsics/erfc_scaled.c (erfc_scaled_r16): Don't define if 	__float128 is not available.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205193 138bc75d-0d04-0410-961f-82ee72b054a4